# afl-total-points-model

./: README.md  python-package-upload.txt
00-data-prep/: 01-data-load.R
01-modelling/: train-glm-model.ipynb  train-nn-model.ipynb
02-betting/backtesting/: 01-historical-betting-odds-processing.ipynb  02-merging-actual-predicted-odds.ipynb
betting/automated-betting/: bflw-get-place-cancel-bets.ipynb
betting/backtesting/: 03-backtesting.ipynb
data-prep/: 02-data-preprocessing.ipynb  02-merge-data-sources.R  03-modelling-data-prep.R  04-betting-data-load.R  data_processing.py
modelling/: hyperparameter_tuning.py  model_building.ipynb  model_feature_selection.ipynb  model_hyperparameter_tuning.ipynb  optuna_xgb_param_grid.py  supermodel.py  train-gbm-model.ipynb
modelling/model-evaluation/: model-evaluation.ipynb  model_evaluation.ipynb
notebooks/: data_preprocessing.ipynb  exploratory-data-analysis.ipynb  model_building.ipynb  model_evaluation.ipynb  model_hyperparameter_tuning.ipynb
total-points-model/: README.md  pyproject.toml
total-points-model/tests/tests-data-prep/: test_preprocessing.py
total-points-model/total_points_model/: config.py
total-points-model/total_points_model/domain/contracts/: mappings.py  rolling_columns.py
total-points-model/total_points_model/domain/modelling/: hyperparameter_tuning.py  model_evaluation.py  optuna_xgb_param_grid.py  supermodel.py
total-points-model/total_points_model/domain/preprocessing/: data_preprocessor.py  elo_calculator.py  match-data-load.R  preprocessing_functions.py
(+14 files in other folders)
